Rearrange mule test resources